tests/pos/objects/12-object.ts

/*@ foo :: ({x: number}) => void */
export function foo(o):void {
  o.x = 10;
}
