tests/neg/objects/12-object.ts

/*@ foo :: ({ x: number }) => void */
export function foo(o: any) {
    o.x = "aaa";
}
